Tue Jul 16 18:50:08 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_count): [DOC] fix typo.  Array#count uses ==, not
	  ===.  a question at asakusa.rb ML.

Tue Jul 16 18:35:48 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul_karatsuba): Avoid duplicate calculation when
	  squaring.
	  ((bary_mul_toom3_branch): Ditto.

Tue Jul 16 17:43:22 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (link_free_heap_slot): removed.

	* gc.c (slot_sweep): use `heaps_add_freeslot' instead of
	  `link_free_heap_slot'.

	* gc.c (assign_heap_slot): use local variable `slot' instead of
	  `heaps'.

Tue Jul 16 17:21:39 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (assign_heap_slot): refactoring variable names.

	* gc.c (slot_add_freeobj): added.

	* gc.c (heaps_add_freeslot): added.

	* gc.c (finalize_list, rb_gc_force_recycle, slot_sweep): use
	  `slot_add_freeobj' instead of modifying linked list directly.

Tue Jul 16 16:30:58 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (lazy_sweep): refactoring.

Tue Jul 16 13:32:06 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (enc_set_index): since r41967, old terminator is dealt
	  with in str_fill_term().  should not consider it here because this
	  function is called before any encoding is set.

Tue Jul 16 11:12:03 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* proc.c (rb_block_arity): raise ArgumentError if no block given.

Tue Jul 16 08:15:22 2013  Zachary Scott  <e@zzak.io>

	* ext/bigdecimal/lib/bigdecimal/util.rb: [DOC] document top-level
	  classes from BigDecimal utils native extensions

Tue Jul 16 03:23:03 2013  Zachary Scott  <e@zzak.io>

	* numeric.c: [DOC] improve rdoc formatting for parameters and links

Mon Jul 15 14:40:00 2013  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h (rb_big2str0): Deprecated.

	* bignum.c (rb_big2str1): Renamed from rb_big2str0.
	  (rb_big2str0): Deprecated wrapper for rb_big2str1.
	  (rb_big2str): Invoke rb_big2str1 instead of rb_big2str0.
