@@ -1,3 +1,8 @@
+Tue Jul 16 19:05:12 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (big_shift3): Big shift width is not a problem for right
+	  shift.
+
 Tue Jul 16 18:50:08 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* array.c (rb_ary_count): [DOC] fix typo.  Array#count uses ==, not
@@ -7,7 +12,7 @@ Tue Jul 16 18:35:48 2013  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (bary_mul_karatsuba): Avoid duplicate calculation when
 	  squaring.
-	  ((bary_mul_toom3_branch): Ditto.
+	  (bary_mul_toom3_branch): Ditto.
 
 Tue Jul 16 17:43:22 2013  Koichi Sasada  <ko1@atdot.net>
 
